force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Account_Mappings__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Account_Mappings__c</fullName>
    <label>Account Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>