force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Connection_Event_Sent__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Connection_Event_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to gather metrics for AC marketing when the Connection Setup step is completed the first time</description>
    <label>Connection Event Sent</label>
    <type>Checkbox</type>
</CustomField>