force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Contact_Sync_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Contact_Sync_Criteria__c</fullName>
    <label>Contact Sync Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>