force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Custom_Contact_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Custom_Contact_Mapping__c</fullName>
    <label>Custom Contact Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>