force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Custom_Field_Mapping_Complete__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Custom_Field_Mapping_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Field Mapping Complete</label>
    <type>Checkbox</type>
</CustomField>