force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Custom_Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Custom_Field_Mappings__c</fullName>
    <label>Custom Field Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>