force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__First_Sync_Event_Sent__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__First_Sync_Event_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for AC marketing to sent their first sync</description>
    <label>First Sync Event Sent</label>
    <type>Checkbox</type>
</CustomField>