force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Full_Account_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Full_Account_Mapping__c</fullName>
    <label>Full Account Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>