force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Has_Crm__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Has_Crm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has CRM</label>
    <type>Checkbox</type>
</CustomField>