force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Inbound_Connector_Step_Completed__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Inbound_Connector_Step_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inbound Connector Step Completed</label>
    <type>Checkbox</type>
</CustomField>