force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Info_Step__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Info_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info Step</label>
    <type>Checkbox</type>
</CustomField>