force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Job_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Job_Frequency__c</fullName>
    <label>Job Frequency</label>
    <type>TextArea</type>
</CustomField>