force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Job_Id__c</fullName>
    <label>Job Id</label>
    <type>TextArea</type>
</CustomField>