force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Job_Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Job_Start_Hour__c</fullName>
    <label>Job Start Hour</label>
    <type>TextArea</type>
</CustomField>