force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Last_Account_Sync__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Last_Account_Sync__c</fullName>
    <defaultValue>&quot;1970-01-01T00:00:00-05:00&quot;</defaultValue>
    <description>Format:
1970-01-01T00:00:00-05:00</description>
    <label>Last Account Sync</label>
    <length>30</length>
    <type>Text</type>
</CustomField>