force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Map_Account__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Map_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map Account</label>
    <type>Checkbox</type>
</CustomField>