force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Map_Custom_Contact__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Map_Custom_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map Custom Contact</label>
    <type>Checkbox</type>
</CustomField>