force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Map_Standard_Lead__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Map_Standard_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map Standard Lead</label>
    <type>Checkbox</type>
</CustomField>