force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Sync_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Sync_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check if Opportunity is tracked as event in ActiveCampaign</description>
    <label>Sync Opportunity</label>
    <type>Checkbox</type>
</CustomField>