force-app/main/default/objects/ActiveCamp__Setup_Data__c/fields/ActiveCamp__Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Sync_Type__c</fullName>
    <label>Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Criteria</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>New Leads</fullName>
                <isActive>false</isActive>
                <label>New Leads</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>